fix: fix typos and incorrect swagger annotations
